--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,7 +2,7 @@
   user works!
 </p>
 
-<form class="form-horizontal">
+<form class="form-horizontal" (ngSubmit)="submit()">
 
   <div class="form-group row">
     <label for="uid" class="control-label text-right col-sm-2">UID:</label>
